--- a/library-events-producer/library-events-producer/src/main/resources/application.properties
+++ b/library-events-producer/library-events-producer/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=library-events-producer
 
-spring.kafka.producer.bootstrap-servers=localhost:9092
+#spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+spring.kafka.admin.properties.bootstrap-servers=localhost:9092
+spring.kafka.topic=library-events
+
+
